--- a/index.ipynb
+++ b/index.ipynb
@@ -78,22 +78,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Population'"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-20-ab4d0f693647>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-ab4d0f693647>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    greenville_population = \"greenville\":'Population' # change None\u001b[0m\n\u001b[0m                                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
-    "greenville_population = \"greenville:'Population' # change None\n",
+    "greenville_population = \"greenville\":'Population' # change None\n",
     "greenville_population # 93"
    ]
   },
