--- a/index.ipynb
+++ b/index.ipynb
@@ -91,7 +91,7 @@
     }
    ],
    "source": [
-    "greenville_population =  # change None\n",
+    "greenville_population = {\"Pop\"} # change None\n",
     "greenville_population # 93"
    ]
   },
