--- a/index.ipynb
+++ b/index.ipynb
@@ -78,22 +78,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Population'}"
+       "93"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "greenville_population = greenville['P'] # change None\n",
+    "greenville_population = greenville['Population'] # change None\n",
     "greenville_population # 93"
    ]
   },
