--- a/index.ipynb
+++ b/index.ipynb
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
        "  'Area': 2396}]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "salina = None \n",
+    "salina = \n",
     "salina\n",
     "# {'City': 'Salina Island', 'Country': 'Italy', 'Population': 3, 'Area': 26}"
    ]
