--- a/index.ipynb
+++ b/index.ipynb
@@ -342,23 +342,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'countries' is not defined",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-34-efba56ea0786>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-33-9b55ba84eafa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlos_cabos_pop\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcountries\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mlos_cabos_pop\u001b[0m \u001b[0;31m# 288\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'countries' is not defined"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-34-efba56ea0786>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    los_cabos_pop = cities: \"Population\"[4]\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "los_cabos_pop = cities: \"Pop\"\n",
+    "los_cabos_pop = cities\n",
     "los_cabos_pop # 288"
    ]
   },
