--- a/index.ipynb
+++ b/index.ipynb
@@ -342,22 +342,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'City': 'Los Cabos', 'Country': 'Mexico', 'Population': 288, 'Area': 3751}"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-37-33903fce9349>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-37-33903fce9349>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    los_cabos_pop = cities[4]:\"Population\"\u001b[0m\n\u001b[0m                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
-    "los_cabos_pop = cities[4]:\n",
+    "los_cabos_pop = cities[4]\n",
     "los_cabos_pop # 288"
    ]
   },
